# awatcher

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml  verify.yml
config/: aw-awatcher.service  awatcher.service
src/: bundle.rs  config.rs  kwin_idle.rs  kwin_window.js  kwin_window.rs  lib.rs  main.rs  report_client.rs  watchers.rs  wl_bindings.rs  wl_connection.rs  wl_foreign_toplevel.rs  wl_kwin_idle.rs  wl_kwin_window.rs  x11_connection.rs  x11_screensaver_idle.rs  x11_window.rs
src/bundle/: awatcher.desktop  menu.rs  modules.rs  server.rs  site_data.rs
src/config/: defaults.rs  file_config.rs  filters.rs
src/watchers/: gnome_idle.rs  gnome_window.rs  idle.rs  kwin_window.rs  wl_connection.rs  wl_foreign_toplevel.rs  wl_kwin_idle.rs  x11_connection.rs  x11_screensaver_idle.rs  x11_window.rs
watchers/: Cargo.toml
watchers/service/: aw-awatcher.service
watchers/src/: config.rs  lib.rs  report_client.rs  subscriber.rs  watchers.rs
watchers/src/config/: defaults.rs  file_config.rs  filters.rs
watchers/src/watchers/: gnome_idle.rs  gnome_wayland.rs  gnome_window.rs  idle.rs  kwin_window.js  kwin_window.rs  wl_bindings.rs  wl_connection.rs  wl_cosmic_toplevel_management.rs  wl_dwl_ipc.rs  wl_ext_idle_notify.rs  wl_foreign_toplevel.rs  wl_foreign_toplevel_management.rs  wl_kwin_idle.rs  x11_connection.rs  x11_screensaver_idle.rs  x11_window.rs
watchers/src/watchers/wl-protocols/: dwl_ipc_unstable_v2.xml
