[package]
name = "awatcher"
description = "An activity and idle watcher based on ActivityWatch"
version = { workspace = true }
authors = ["Demmie <2e3s19@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/2e3s/awatcher"

[[bin]]
name = "awatcher"
path = "src/main.rs"

[build-dependencies]
image = { version = "0.24.6" }

[workspace]
members = ["watchers"]

[workspace.package]
version = "0.2.2-beta2"

[workspace.dependencies]
anyhow = "1.0.75"
log = { version = "0.4.20", features = ["std"] }
tokio = { version = "1.32.0" }

[dependencies]
watchers = { path = "./watchers", default-features = false }
chrono = "0.4.31"
toml = "0.8.1"
clap = { version = "4.4.6", features = ["string"] }
fern = { version = "0.6.2", features = ["colored"] }
log = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "signal"] }

ksni = {version = "0.2.1", optional = true}
aw-server = { git = "https://github.com/ActivityWatch/aw-server-rust", optional = true, rev = "448312d" }
aw-datastore = { git = "https://github.com/ActivityWatch/aw-server-rust", optional = true, rev = "448312d" }
open = { version = "5.0.0", optional = true }

[features]
default = ["gnome", "kwin_window"]
gnome = ["watchers/gnome"]
kwin_window = ["watchers/kwin_window"]
bundle = ["ksni", "aw-server", "aw-datastore", "open"]

[package.metadata.deb]
features = ["bundle"]
extended-description = """\
Awatcher is a window activity and idle watcher with an optional tray and UI for statistics.
The goal is to compensate the fragmentation of desktop environments on Linux by supporting all reportable environments, 
to add more flexibility to reports with filters, and to have better UX with the distribution by a single executable.
"""
assets = [
    ["src/bundle/awatcher.desktop", "usr/share/applications/", "644"],
    ["src/bundle/logo.png", "usr/share/awatcher/icons/awatcher.png", "644"],
    ["target/release/awatcher", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/awatcher/README", "644"],
]
