[package]
name = "awatcher"
description = "An activity and idle watcher based on ActivityWatch"
version = { workspace = true }
authors = ["Demmie <2e3s19@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/2e3s/awatcher"

[[bin]]
name = "awatcher"
path = "src/main.rs"

[build-dependencies]
image = { version = "0.25.1" }

[workspace]
members = ["watchers"]

[workspace.package]
version = "0.2.7"

[workspace.dependencies]
anyhow = "1.0.83"
log = { version = "0.4.21", features = ["std"] }
tokio = { version = "1.37.0" }
serde = "1.0.202"

[dev-dependencies]
rstest = "0.19.0"
tempfile = "3.10.1"

[dependencies]
watchers = { path = "./watchers", default-features = false }
chrono = "0.4.38"
toml = "0.8.13"
clap = { version = "4.5.4", features = ["string"] }
fern = { version = "0.6.2", features = ["colored"] }
log = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "signal"] }

ksni = {version = "0.2.2", optional = true}
aw-server = { git = "https://github.com/ActivityWatch/aw-server-rust", optional = true, rev = "448312d" }
aw-datastore = { git = "https://github.com/ActivityWatch/aw-server-rust", optional = true, rev = "448312d" }
open = { version = "5.1.3", optional = true }
serde = { workspace = true, optional = true }

[features]
default = ["gnome", "kwin_window"]
gnome = ["watchers/gnome"]
kwin_window = ["watchers/kwin_window"]
bundle = ["ksni", "aw-server", "aw-datastore", "open", "serde"]

[package.metadata.deb.variants.module]
name = "aw-awatcher"
extended-description = """\
Awatcher is a window activity and idle watcher for ActivityWatch.
The goal is to compensate the fragmentation of desktop environments on Linux by supporting all reportable environments with both Wayland and X11.
"""
assets = [
    ["target/release/awatcher", "usr/bin/aw-awatcher", "755"],
    ["README.md", "usr/share/doc/aw-awatcher/README", "644"],
]
conflicts = "awatcher"

[package.metadata.deb.variants.bundle]
name = "awatcher"
features = ["bundle"]

extended-description = """\
Awatcher is a window activity and idle watcher with a tray, server and UI for statistics.
The goal is to compensate the fragmentation of desktop environments on Linux by supporting all reportable environments with both Wayland and X11.
"""
assets = [
    ["src/bundle/awatcher.desktop", "usr/share/applications/", "644"],
    ["src/bundle/logo.png", "usr/share/awatcher/icons/awatcher.png", "644"],
    ["target/release/awatcher", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/awatcher/README", "644"],
]
conflicts = "aw-awatcher"
