[package]
name = "watchers"
version = { workspace = true }
authors = ["Demmie <2e3s19@gmail.com>"]
edition = "2021"

[lib]
name = "watchers"
crate-type = ["lib"]
path = "src/lib.rs"

[dev-dependencies]
rstest = "0.18.2"
tempfile = "3.8.0"

[dependencies]
aw-client-rust = { git = "https://github.com/ActivityWatch/aw-server-rust", rev = "448312d" }
wayland-client = "0.31.1"
wayland-protocols = { version = "0.31.0", features = ["staging", "client" ]}
wayland-protocols-plasma = { version = "0.2.0", features = ["client"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
x11rb = { version = "0.12.0", features = ["screensaver"] }
zbus = {version = "3.14.1", optional = true}
chrono = "0.4.31"
toml = "0.8.1"
dirs = "5.0.1"
serde = { workspace = true, features = ["derive"] }
serde_default = "0.1.0"
serde_json = "1.0.107"
regex = "1.9.5"
gethostname = "0.4.3"
log = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1.73"
tokio = { workspace = true, features = ["time", "sync"] }

[features]
default = ["gnome", "kwin_window"]
gnome = ["zbus"]
kwin_window = ["zbus"]
