[package]
name = "watchers"
version = { workspace = true }
authors = ["Demmie <2e3s19@gmail.com>"]
edition = "2021"

[lib]
name = "watchers"
crate-type = ["lib"]
path = "src/lib.rs"

[dev-dependencies]
rstest = "0.25.0"
tempfile = "3.13.0"

[dependencies]
aw-client-rust = { git = "https://github.com/ActivityWatch/aw-server-rust", rev = "656f3c9" }
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = ["staging", "client" ]}
wayland-protocols-plasma = { version = "0.3.5", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.5", features = ["client"] }
x11rb = { version = "0.13.1", features = ["screensaver"] }
zbus = {version = "5.1.0", optional = true}
chrono = "0.4.38"
toml = "0.8.19"
dirs = "6.0.0"
serde = { workspace = true, features = ["derive"] }
serde_default = "0.2.0"
serde_json = "1.0.132"
regex = "1.11.1"
gethostname = "1.0.2"
log = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1.83"
tokio = { workspace = true, features = ["time", "sync", "macros"] }

[features]
default = ["gnome", "kwin_window"]
gnome = ["zbus"]
kwin_window = ["zbus"]
